# hightower

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  DEVELOPERS.md  Makefile  PLAN.md  README.md  TODO.md  TROUBLESHOOTING.md  build.zig  build.zig.zon  hightower-gateway.service  hightower-node.service  hightower-stun.service  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deb.yml  packages.yml
benches/: kv_engine_bench.rs
cli/: Cargo.toml  README.md  hightower-gateway.service  hightower-node.service  hightower-stun.service
cli/debian/: postrm
cli/src/: main.rs
cli/tests/: integration_test.rs
client/: CHANGELOG.md  Cargo.toml  README.md
client/examples/: connection_persistence.rs  custom_endpoint.rs  e2e_echo.rs  https_gateway.rs  peer_to_peer.rs  remote_gateway.rs  simple_deregister.rs  simple_register.rs  storage_modes.rs
client/src/: broker.rs  connection.rs  error.rs  ip_discovery.rs  lib.rs  storage.rs  transport.rs  types.rs
cnet/: Cargo.toml  Dockerfile  docker-compose.yml
cnet/src/: main.rs
context/: Cargo.toml
context/src/: lib.rs  token.rs
debian/: postinst
docs/plans/: 2026-05-18-app-level-virtual-network-nat-traversal.md
examples/: auth_flow.rs  basic.rs  basic_kv.rs  connection_persistence.rs  custom_endpoint.rs  https_gateway.rs  keepalive_demo.rs  query_on_discovery.rs  remote_gateway.rs  serialization.rs  simple_deregister.rs  simple_register.rs  storage_modes.rs  two_peers.rs
gateway/: CHANGELOG.md  Cargo.toml  README.md
gateway/src/: acme.rs  certificates.rs  client.rs  common.rs  ip_allocator.rs  lib.rs  main.rs  tls.rs  wireguard_api.rs
gateway/src/api/: certificates.rs  mod.rs  static_assets.rs  types.rs
gateway/src/api/handlers/: acme.rs  auth_keys.rs  connections.rs  console.rs  dashboard.rs  endpoints.rs  health.rs  mod.rs  sessions.rs
gateway/static/css/: dashboard.css
gateway/templates/: auth_keys_list.html  dashboard.html  endpoints.html  login.html  login_alert.html  nodes_table.html  settings.html  side_menu.html
hightower/: Cargo.toml  README.md  hightower-node.service
hightower-client/: Cargo.toml
hightower-client/examples/: https_gateway.rs  remote_gateway.rs  simple_register.rs  storage_modes.rs
hightower-client/src/: connection.rs  storage.rs  transport.rs
hightower-cnet/: Cargo.toml
hightower-cnet/src/: main.rs
hightower-gateway/: Cargo.toml  Makefile
hightower-gateway/src/: client.rs  ip_allocator.rs  main.rs  startup.rs  tls.rs
hightower-gateway/templates/: settings.html  side_menu.html
hightower-kv/: .gitignore  README.md
hightower-kv/src/: command.rs  lib.rs
hightower-mdns/: Cargo.toml
hightower-naming/: Cargo.toml
hightower-naming/examples/: with_random_suffix.rs
hightower-node/: Makefile  README.md
hightower-node/src/: context.rs
hightower-stun/: Makefile
hightower-stun/examples/: get_public_ip.rs
hightower-stun/src/: client.rs
hightower-wireguard/: Cargo.toml
hightower-wireguard/tests/: keepalive_test.rs  rekey_and_timeout_tests.rs
hightower/debian/: postinst
hightower/src/commands/: node.rs  stun_client.rs
kv/: Cargo.toml  DEVELOPERS.md
kv/benches/: kv_engine_bench.rs
kv/examples/: auth_flow.rs  basic_kv.rs  prefix_queries.rs
kv/src/: auth_service.rs  auth_types.rs  config.rs  crypto.rs  engine.rs  lib.rs  metrics.rs  prefix_index.rs  snapshot.rs  state.rs  storage.rs
logging/: Cargo.toml
logging/src/: lib.rs
mdns/: CLAUDE.md  Cargo.toml  README.md
mdns/examples/: query_on_discovery.rs
mdns/src/: broadcast.rs  constants.rs  lib.rs  packet.rs  query.rs  socket.rs
mdns/tests/: peer_discovery.rs
naming/: CHANGELOG.md  Cargo.toml  README.md
naming/examples/: basic.rs  custom_suffix_length.rs  with_prefix.rs  with_random_suffix.rs
naming/src/: adjectives.rs  lib.rs  nouns.rs
node/: Cargo.toml  README.md
node-lib/: Cargo.toml
node-lib/src/: certificates.rs  lib.rs  node_impl.rs  node_name.rs
node/src/: context.rs  lib.rs  main.rs
root-api/: Cargo.toml
root-api/src/: client.rs  lib.rs
root-client/: Cargo.toml
root-client/src/: certificate.rs  lib.rs
root-lib/: Cargo.toml
root-lib/src/: lib.rs
root-web/: Cargo.toml
root-web/src/: client.rs  lib.rs  ui.rs
service/: Cargo.toml
service/src/: cli.rs  lib.rs  main.rs  shutdown.rs
src/: adjectives.rs  api.rs  auth_operations.zig  auth_service.rs  auth_types.rs  broadcast.rs  certificates.rs  cli.rs  client.rs  command.rs  common.rs  compactor.rs  config.rs  connection.rs  constants.rs  context.rs  crypto.rs  engine.rs  error.rs  gateway_core_server_test.zig  gateway_server.zig  gateway_server_test.zig  id_generator.rs  index.rs  initiator.rs  ip_discovery.rs  keys.rs  kv.rs  kv_shell.zig  kv_store.zig  kv_store_test.zig  lib.rs  log_segment.rs  main.rs  main.zig  messages.rs  metrics.rs  mode.rs  node.rs  node_mode.rs  (+20 more)
src/api/: certificates.rs  mod.rs  types.rs
src/client/: index.html
src/commands/: curl.rs  gateway.rs  node.rs  stun_server.rs
src/core/: name_generator.zig  noise_ik.zig  (+2 more)
stun/: Cargo.toml  IMPLEMENTATION.md  LICENSE  README.md
stun/examples/: get_public_ip.rs  run_server.rs
stun/src/: client.rs  lib.rs  server.rs
templates/: dashboard.html  login.html  nodes.html  nodes_table.html  settings.html
tests/: communication_edge_cases_tests.rs  connection_tests.rs  error_handling_tests.rs  handshake_tests.rs  integration_test.rs  keepalive_test.rs  peer_discovery.rs  rekey_and_timeout_tests.rs  session_cleanup_tests.rs  transport_security_tests.rs  transport_tests.rs
wireguard/: Cargo.toml  README.md
wireguard/examples/: serialization.rs
wireguard/src/: connection.rs  crypto.rs  initiator.rs  lib.rs  messages.rs  protocol.rs  replay.rs  responder.rs
wireguard/src/connection/: actor.rs  error.rs  logging.rs  session.rs  stream.rs
wireguard/tests/: communication_edge_cases_tests.rs  connection_tests.rs  error_handling_tests.rs  handshake_tests.rs  keepalive_test.rs  rekey_and_timeout_tests.rs  session_cleanup_tests.rs  transport_security_tests.rs
(+90 files in other folders)
