[package]
name = "hightower-client"
version = "0.1.4"
edition = "2021"
authors = ["Chris Hayen <chris@shotgun.dev>"]
description = "Hightower client library"
license = "MIT"
repository = "https://github.com/chrishayen/hightower-client"
homepage = "https://github.com/chrishayen/hightower-client"
documentation = "https://docs.rs/hightower-client"
readme = "README.md"
keywords = ["wireguard", "gateway", "networking", "vpn", "hightower"]
categories = ["network-programming", "api-bindings"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    ".claude/",
    "*.lock",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hightower-wireguard = { version = "0.2.1", features = ["transport"] }
hightower-stun = "0.1.1"
hightower-kv = "0.1.3"
hex = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
