[workspace]
resolver = "2"
members = [
    "hightower",
    "hightower-client",
    "hightower-cnet",
    "hightower-gateway",
    "hightower-kv",
    "hightower-mdns",
    "hightower-naming",
    "hightower-node",
    "hightower-stun",
    "hightower-wireguard",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Chris Hayen <chris@shotgun.dev>"]
license = "MIT"
repository = "https://github.com/chrishayen/hightower"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
