[package]
name = "hightower-client"
version = "0.1.5"
edition = "2021"
authors = ["Chris Hayen <chris@shotgun.dev>"]
description = "Hightower client library"
license = "MIT"
repository = "https://github.com/chrishayen/hightower"
homepage = "https://github.com/chrishayen/hightower"
documentation = "https://docs.rs/client"
readme = "README.md"
keywords = ["wireguard", "gateway", "networking", "vpn", "hightower"]
categories = ["network-programming", "api-bindings"]
exclude = [
    "target/",
    ".git/",
    ".gitignore",
    ".claude/",
    "*.lock",
]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "charset", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wireguard = { package = "hightower-wireguard", path = "../wireguard", features = ["transport"] }
stun = { package = "hightower-stun", path = "../stun" }
kv = { package = "hightower-kv", path = "../kv" }
hex = "0.4"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
url = "2.5"

[dev-dependencies]
tempfile = "3"
tracing-subscriber = "0.3"
