[package]
name = "hightower-gateway"
version = "0.1.7"
edition = "2021"
authors = ["Chris Hayen <chris@shotgun.dev>"]
description = "Gateway service for the Hightower project"
license = "MIT"
repository = "https://github.com/chrishayen/hightower-gateway"
readme = "README.md"
keywords = ["gateway", "wireguard", "hightower"]
categories = ["network-programming"]

[lib]
name = "gateway"
path = "src/lib.rs"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
ctrlc = "3"
wireguard = { package = "hightower-wireguard", path = "../wireguard", features = ["transport"] }
kv = { package = "hightower-kv", path = "../kv" }
naming = { package = "hightower-naming", path = "../naming" }
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
hyper = { version = "1.7", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower = "0.5"
tracing = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
subtle = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
tokio-rustls = "0.26"
rustls = "0.23"
rustls-pemfile = "2.1"
rcgen = "0.13"
instant-acme = "0.7"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
rand = "0.8"
askama = "0.12"
sha2 = "0.10"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
rust-embed = "8.0"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3"
