[package]
name = "hightower-mdns"
version = "0.1.3"
edition = "2021"
authors = ["Chris Hayen"]
description = "A naive Rust implementation of mDNS (Multicast DNS) for advertising and discovering hostnames on a local network"
license = "MIT"
repository = "https://github.com/chrishayen/hightower-mdns"
readme = "README.md"
keywords = ["mdns", "multicast", "dns", "networking", "discovery"]
categories = ["network-programming", "asynchronous"]
exclude = [
  "CLAUDE.md",
  "rfc6762.txt",
  ".gitignore",
  ".github",
  "README.md"
]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros", "net"] }
socket2 = "0.5"
log = "0.4"

[dev-dependencies]
env_logger = "0.11"
