[package]
name = "hightower-root-client"
version.workspace = true
edition.workspace = true

[dependencies]
hightower-context = { path = "../context" }
hightower-kv = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
