[package]
name = "hightower-service"
version.workspace = true
edition.workspace = true

[dependencies]
hightower-node = { path = "../node-lib" }
hightower-root = { path = "../root-lib" }
hightower-context = { path = "../context" }
hightower-logging = { path = "../logging" }
tracing = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }

[dev-dependencies]
hightower-root-client = { path = "../root-client" }
serde_json = { workspace = true }
tempfile = { workspace = true }
