[package]
name = "stun"
version = "0.1.1"
edition = "2021"
authors = ["Chris Hayen <chris@shotgun.dev>"]
license = "MIT"
description = "A lightweight STUN (Session Traversal Utilities for NAT) server and client implementation conforming to RFC 8489"
repository = "https://github.com/chrishayen/hightower-stun"
keywords = ["stun", "nat", "network", "p2p", "rfc8489"]
categories = ["network-programming"]
readme = "README.md"
exclude = [
    "rfc8489.txt",
    "Makefile",
    ".cargo/",
    "target/",
]

[dependencies]

[[example]]
name = "get_public_ip"
path = "examples/get_public_ip.rs"

[[example]]
name = "run_server"
path = "examples/run_server.rs"
