[package]
name = "hightower-wireguard"
version = "0.2.1"
edition = "2024"
authors = ["Chris Hayen"]
description = "A WireGuard Noise_IK handshake implementation"
license = "MIT"
repository = "https://github.com/chrishayen/hightower-wireguard"
keywords = ["wireguard", "vpn", "networking", "cryptography"]
categories = ["network-programming", "cryptography"]
readme = "README.md"
exclude = [
    ".git",
    ".gitignore",
    "target",
    "wireguard.pdf",
]

[dependencies]
# Cryptographic primitives
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
blake2 = "0.10"
hkdf = "0.12"
rand = "0.8"
subtle = "2.5"

# Networking and utilities
thiserror = "1.0"
byteorder = "1.5"

# Optional transport layer dependencies
tokio = { version = "1.47", features = ["net", "sync", "time", "rt", "macros"], optional = true }
tracing = { version = "0.1", optional = true }
hex = { version = "0.4", optional = true }

[features]
default = []
transport = ["tokio", "tracing", "hex"]

[dev-dependencies]
tokio = { version = "1.47", features = ["full"] }
tracing-subscriber = "0.3"
